--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@hapi/boom": "^7.4.2",
     "@hapi/joi": "^15.1.0",
     "bcrypt": "^3.0.8",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.7",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "chalk": "^3.0.0",
